--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
