--- a/app.json
+++ b/app.json
@@ -19,7 +19,9 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.moonhighway.color-organizer",
+      "buildNumber": "1.0.0"
     }
   }
 }
